--- a/lista_ab2/projeto_1/chatgpt/static/index.html
+++ b/lista_ab2/projeto_1/chatgpt/static/index.html
@@ -33,6 +33,9 @@
       padding: 10px 15px;
       margin-left: 5px;
     }
+    pre {
+        overflow: auto;
+    }
   </style>
 </head>
 <body>
@@ -67,7 +70,7 @@
     }
 
     function appendMessage(msg, sender) {
-      const div = document.createElement("div");
+      const div = document.createElement("pre");
       div.className = `message ${sender}`;
       div.textContent = msg;
       document.getElementById("messages").appendChild(div);
